--- a/index.html
+++ b/index.html
@@ -20,13 +20,24 @@
     </head>
     <body class="bg-light text-dark">
         <header class="container-fluid bg-secondary">
-            Test 1
+            <nav class="navbar fixed-top navbar-dark">
+                <a class="navbar-brand nav-link active" href="index.html">Pizza Pie Fanclub</a>
+                <menu class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                </menu>
+            </nav>
         </header>
         <main class="container-fluid text-center">
-            Test 2
+            <h1>Welcome to Pizza Pie Fanclub!</h1>
+            <p>Here you can share your pizza interests with other pizza lovers.</p>
         </main>
         <footer class="container-fluid bg-dark text-light">
-            Test 3
+            Bottom Text
         </footer>
     </body>
 </html>
