survey.html, functional pages

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                         <a class="nav-link active" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="survey.html">Survey</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                 </menu>
@@ -35,9 +38,10 @@
         <main class="container-fluid text-center">
             <h1>Welcome to Pizza Pie Fanclub!</h1>
             <p>Here you can share your pizza interests with other pizza lovers.</p>
+            <a href="survey.html"><button>Show me the pizza!</button></a>
         </main>
-        <footer class="container-fluid bg-dark text-light">
-            Bottom Text
+        <footer class="container-fluid bg-secondary text-light">
+            <a class="text-reset" href="https://github.com/CDJ64/simon">Made by CDJ64</a>
         </footer>
     </body>
 </html>
