--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             <h1>Welcome to Pizza Pie Fanclub!</h1>
             <p>Here you can share your pizza interests with other pizza lovers.</p>
             <p>Please enter your name first:</p>
-            <input type="text" id="name" placeholder="Name" />
-            <a href="survey.html"><button onclick="login()">Show me the pizza!</button></a>
+            <div>
+                <input type="text" id="name" placeholder="Name" />
+                <a href="survey.html"><button onclick="login()">Show me the pizza!</button></a>
+            </div>
         </main>
         <footer class="container-fluid bg-secondary text-light">
             <a class="text-reset" href="https://github.com/CDJ64/simon">Made by CDJ64</a>
