Login button given a clearer label

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>Please enter your name first:</p>
             <div>
                 <input type="text" id="name" placeholder="Name" />
-                <a href="survey.html"><button onclick="login()">Show me the pizza!</button></a>
+                <a href="survey.html"><button onclick="login()">Login</button></a>
             </div>
         </main>
         <footer class="container-fluid bg-secondary text-light">
