Player name added to survey page

--- a/survey.html
+++ b/survey.html
@@ -36,6 +36,10 @@
             </nav>
         </header>
         <main class="container-fluid text-center">
+            <div class="players">
+                Player: 
+                <span class="player-name">Error</span>
+            </div>
             <h2>Which do you prefer?</h2>
             <menu>
                 <li>
@@ -64,5 +68,6 @@
         <footer class="container-fluid bg-secondary text-light">
             <a class="text-reset" href="https://github.com/CDJ64/simon">Made by CDJ64</a>
         </footer>
+        <script src="survey.js"></script>
     </body>
 </html>
