Adjusted name color and third option

--- a/survey.html
+++ b/survey.html
@@ -44,7 +44,7 @@
             <menu>
                 <button class="survey-button">Cheese</button>
                 <button class="survey-button">Pepperoni</button>
-                <button class="survey-button">I like/dislike them equally</button>
+                <button class="survey-button">Neither</button>
             </menu>
             <svg
                 aria-hidden="true"
