--- a/survey.html
+++ b/survey.html
@@ -42,9 +42,9 @@
             </div>
             <h2>Which do you prefer?</h2>
             <menu>
-                <button class="survey-button">Cheese</button>
-                <button class="survey-button">Pepperoni</button>
-                <button class="survey-button">Neither</button>
+                <button class="survey-button option-cheese">Cheese</button>
+                <button class="survey-button option-pepperoni">Pepperoni</button>
+                <button class="survey-button option-neither">Neither</button>
             </menu>
             <svg
                 aria-hidden="true"
