Survey buttons fully functional

--- a/survey.html
+++ b/survey.html
@@ -43,8 +43,8 @@
             <h2>Which do you prefer?</h2>
             <menu>
                 <button id="Cheese" class="survey-button" onclick="pieChart.update(this)">Cheese</button>
-                <button id="Pepperoni" class="survey-button">Pepperoni</button>
-                <button id="Neither" class="survey-button">Neither</button>
+                <button id="Pepperoni" class="survey-button" onclick="pieChart.update(this)">Pepperoni</button>
+                <button id="Neither" class="survey-button" onclick="pieChart.update(this)">Neither</button>
             </menu>
             <div class="chart-container">
                 <canvas width="400" height="400"></canvas>
