Fixed repo link (from "simon" to "startup")

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 Running a website costs money, you know, even if it's just a silly pizza page.</p>
         </main>
         <footer class="container-fluid bg-secondary text-light">
-            <a class="text-reset" href="https://github.com/CDJ64/simon">Made by CDJ64</a>
+            <a class="text-reset" href="https://github.com/CDJ64/startup">Made by CDJ64</a>
         </footer>
     </body>
 </html>
