--- a/survey.html
+++ b/survey.html
@@ -51,7 +51,7 @@
             </div>
         </main>
         <footer class="container-fluid bg-secondary text-light">
-            <a class="text-reset" href="https://github.com/CDJ64/simon">Made by CDJ64</a>
+            <a class="text-reset" href="https://github.com/CDJ64/startup">Made by CDJ64</a>
         </footer>
         <script src="survey.js"></script>
     </body>
