Fetch request for quote (about.js)

--- a/public/about.html
+++ b/public/about.html
@@ -42,9 +42,11 @@
                 I thought it would be cool if people could share their pizza preferences and certain data could be displayed in charts.</p>
             <p>Unfortunately, I don't think this website will continue to exist once I'm done with the class. 
                 Running a website costs money, you know, even if it's just a silly pizza page.</p>
+            <p class="quote">Insert Quote Here</p>
         </main>
         <footer class="container-fluid bg-secondary text-light">
             <a class="text-reset" href="https://github.com/CDJ64/startup">Made by CDJ64</a>
         </footer>
+        <script src="about.js"></script>
     </body>
 </html>
